Manifest: rename listener.js to background.js

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "default_icon": "png.png"
   },
   "background": {
-    "service_worker": "out/listener.js"
+    "service_worker": "out/background.js"
   },
   "permissions": [
     "tabs"
