--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Exclude from Google search non-transparent images when searching \"*smth* png\"",
   "main": "listener.js",
   "scripts": {
-  	"build": "webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,8 +15,11 @@
     "glob": "^9.3.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "@types/webextension-polyfill": "^0.10.0",
+    "imports-loader": "^4.0.1"
   }
 }
