--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.224",
+    "@types/webextension-polyfill": "^0.10.0",
     "copy-webpack-plugin": "^11.0.0",
     "glob": "^9.3.0",
+    "imports-loader": "^4.0.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
+    "web-ext": "^7.6.0",
     "webextension-polyfill": "^0.10.0",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
-    "webpack-merge": "^5.8.0",
-    "@types/webextension-polyfill": "^0.10.0",
-    "imports-loader": "^4.0.1"
+    "webpack-merge": "^5.8.0"
   }
 }
