--- a/manifest-chrome.json
+++ b/manifest-chrome.json
@@ -7,18 +7,12 @@
     "default_icon": "png.png"
   },
   "background": {
-    "page": "out/background.html"
+    "service_worker": "out/background.js"
   },
   "permissions": [
     "tabs",
     "storage"
-  ],
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{a4bdc727-e704-417f-a7c6-3811fa5564cf}",
-      "strict_min_version": "42.0"
-    }
-  },  
+  ], 
   "options_ui": {
     "page": "out/options.html",
     "open_in_tab": false
