--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "build": "webpack",
     "pack": "webpack && node ./buildscritps/pack.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/sinon-chrome": "^2.2.15",
     "@types/webextension-polyfill": "^0.10.7",
     "archiver": "^7.0.1",
     "copy-webpack-plugin": "^12.0.2",
     "glob": "^10.3.14",
+    "jest": "^29.7.0",
+    "sinon-chrome": "^3.0.1",
+    "ts-jest": "^29.1.4",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "web-ext": "^7.11.0",
     "webextension-polyfill": "^0.11.0",
