--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "I HATE FAKE PNG",
-  "description": "Browser extension that filters out non-transparent images from search results",
+  "description": "Remove non-transparent images from PNG search results.",
   "version": "1.1.0",
   "action": {
     "default_icon": "png.png",
